--- a/index.html
+++ b/index.html
@@ -8,29 +8,9 @@
 <body>
 <div id="board" class="board"></div>
 
-
-<div class="info">
-    Search depth:
-    <select id="search-depth">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3" selected>3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-    </select>
-
-	<br>
-    <span>Positions evaluated: <span id="position-count"></span></span>
-    <br>
-    <span>Time: <span id="time"></span></span>
-    <br>
-    <span>Positions/s: <span id="positions-per-s"></span> </span>
-    <br>
-    <br>
-    <div id="move-history" class="move-history">
-    </div>
-
-</div>
+<input type="button" id="getPositionBtn" value="Show position in console" />
+<input type="button" id="clearBtn" value="Clear" />
+<input type="button" id="setRuyLopezBtn" value="Set Position" />
 
 <script src="lib/jquery/jquery-3.2.1.min.js"></script>
 <script src="lib/chessboardjs/js/chess.js"></script>
