--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    Checkmate in num moves:
+    <select id="search-depth">
+        <option value="1">1</option>
+        <option value="2" selected>2</option>
+        <option value="3">3</option>
+    </select>
+
+    First move by:
+    <select id="search-depth">
+        <option value="1" selected>White</option>
+        <option value="0" >Black</option>
+    </select>
+
+    <input type="button" id="solve" value="Find Solution" />
+
+
 <div id="board" class="board"></div>
 
-<input type="button" id="getPositionBtn" value="Show position in console" />
-<input type="button" id="clearBtn" value="Clear" />
-<input type="button" id="setRuyLopezBtn" value="Set Position" />
+<div id="res"></div>
 
 <script src="lib/jquery/jquery-3.2.1.min.js"></script>
 <script src="lib/chessboardjs/js/chess.js"></script>
