recurcive try to solve

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <option value="0" >Black</option>
     </select>
 
-    <input type="button" id="solve" value="Find Solution" />
+    <input type="button" id="solve" value="Start" />
+    <input type="button" id="clear" value="Clear" />
 
 
 <div id="board" class="board"></div>
