--- a/index.html
+++ b/index.html
@@ -2,34 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="lib/chessboardjs/css/chessboard-0.3.0.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!--
-    Checkmate in num moves:
-    <select id="search-depth">
+    <div class="container">
+
+    
+    <div class="row">
+            <div class="col-12">
+
+    <form>     
+    
+    <div class="form-group">
+    <label># moves:</label>    
+    <select id="search-depth" class="form-control">
         <option value="1">1</option>
         <option value="2" selected>2</option>
         <option value="3">3</option>
     </select>
 
-    First move by:
-    <select id="move-turn">
+    <label>First move:</label>
+    <select id="move-turn" class="form-control">
         <option value="0" selected>White</option>
         <option value="1" >Black</option>
     </select>
-    -->
+    </div>
 
-    <input type="button" id="solve" value="Start" />
-    <input type="button" id="clear" value="Clear" />
-    <input type="button" id="stop" value="Stop" />
+    <div class="form-group">
+    <input type="button" id="solve" value="Start" class="btn btn-success" />
+    <input type="button" id="stop" value="Stop" class="btn btn-danger" />
+
+    <input type="button" id="clear" value="Clear" class="btn btn-info" />
+</div>
+</form>   
+
 
 
 <div id="board" class="board"></div>
 
 <div id="res"></div>
+
+
+</div>
+</div>
+</div>
 
 <script src="lib/jquery/jquery-3.2.1.min.js"></script>
 <script src="lib/chessboardjs/js/chess.js"></script>
