try next step of compexity 3 steps

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <select id="search-depth" class="form-control">
         <option value="1" >1</option>
         <option value="2" selected>2</option>
-        <!-- <option value="3">3</option> -->
+        <option value="3">3</option>
     </select>
 
     <label>First move by:</label>
